--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <h2>Stegosaurus</h2>
     <figure>
-      <img src="images\stegosaurus.jpg" alt="">
+      <img src="images/stegosaurus.jpg" alt="">
       <figcaption class="intro">Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>
     </figure>
 
