--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ol>
         <li><a href="#hadrosaur">Hadrosaur</a></li>
         <li><a href="#iguanodon">Iguanodon</a></li>
-        <li><a href="#Stegosaurus">Stegosaurus</a></li>
+        <li><a href="#stegosaurus">Stegosaurus</a></li>
       </ol>
     </nav>
   </header>
